--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@vue/cli-service": "^3.0.3",
     "@vue/eslint-config-standard": "^3.0.4",
     "node-sass": "^4.9.0",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
+    "vue-cli-plugin-vuetify": "^0.2.1",
     "vue-template-compiler": "^2.5.17"
   }
 }
