--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
     "vue-cli-plugin-vuetify": "^0.2.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "vuetify": "^1.2.0"
   }
 }
