--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
+    "simple-syntax-highlighter": "^1.0.0",
     "vue": "^2.5.17",
     "vue-cli-plugin-vuetify": "^0.2.1",
     "vue-template-compiler": "^2.5.17",
