--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "simple-syntax-highlighter": "^1.0.3",
     "vue": "^2.5.17",
     "vue-cli-plugin-vuetify": "^0.2.1",
+    "vue-scrollto": "^2.13.0",
     "vue-template-compiler": "^2.5.17",
     "vuetify": "^1.2.0"
   },
