--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cal",
-  "version": "1.38.1",
+  "version": "1.38.2",
   "description": "A Vue JS full calendar, no dependency, no BS. :metal:",
   "repository": "https://github.com/antoniandre/vue-cal",
   "author": "Antoni Andre <antoniandre.web@gmail.com>",
@@ -43,6 +43,5 @@
     "vuetify": "^1.5.1",
     "babel-polyfill": "^6.26.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
