Separatev2 and v1 docs and add vue-router for nav.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "simple-syntax-highlighter": "^1.0.6",
     "vue": "^2.6.10",
     "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-router": "^3.0.7",
     "vue-scrollto": "^2.15.0",
     "vue-template-compiler": "^2.6.10",
     "vuetify": "^1.5.16"
