--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.8.3",
     "@vue/cli-plugin-babel": "^4.2.2",
     "@vue/cli-plugin-eslint": "^4.2.2",
     "@vue/cli-plugin-router": "^4.2.2",
