--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/plugin-proposal-private-methods": "^7.10.1",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@vue/cli-plugin-babel": "^4.4.1",
     "@vue/cli-plugin-eslint": "^4.4.1",
     "@vue/cli-plugin-router": "^4.4.1",
