Update packages and prepare project for Vue 3.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/cli-plugin-eslint": "^4.5.6",
     "@vue/cli-plugin-router": "^4.5.6",
     "@vue/cli-service": "^4.5.6",
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.6.5",
@@ -34,18 +35,18 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^7.0.0-alpha.0",
     "node-sass": "^4.14.1",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
     "regenerator-runtime": "^0.13.7",
     "sass-loader": "^10.0.2",
     "simple-syntax-highlighter": "^1.4.2",
-    "vue": "^2.6.12",
+    "vue": "^3.0.0",
+    "vue-cli-plugin-vue-next": "~0.1.4",
     "vue-cli-plugin-vuetify": "^2.0.7",
-    "vue-router": "^3.4.3",
+    "vue-router": "^4.0.0-alpha.6",
     "vue-scrollto": "^2.18.2",
-    "vue-template-compiler": "^2.6.12",
     "vuetify": "^2.3.10"
   },
   "keywords": [
