--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.14.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "regenerator-runtime": "^0.13.9",
+    "sass": "^1.49.9",
     "sass-loader": "^10.2.1",
     "simple-syntax-highlighter": "^1.5.0",
     "vue": "^2.6.14",
