Move from Vue CLI to Vite. :fire::bolt:

--- a/package.json
+++ b/package.json
@@ -20,33 +20,20 @@
     "LICENSE"
   ],
   "devDependencies": {
-    "@babel/plugin-proposal-private-methods": "^7.16.11",
+    "@babel/core": "^7.17.9",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@vue/cli-plugin-babel": "^5.0.4",
-    "@vue/cli-plugin-eslint": "^5.0.4",
-    "@vue/cli-plugin-router": "^5.0.4",
-    "@vue/cli-service": "^5.0.4",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "babel-eslint": "^10.1.0",
-    "core-js": "^3.21.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0",
-    "regenerator-runtime": "^0.13.9",
-    "sass": "^1.49.9",
-    "sass-loader": "^10.2.1",
+    "@mdi/font": "^6.6.96",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/compiler-sfc": "^3.2.32",
+    "autoprefixer": "^10.4.4",
+    "eslint": "^8.13.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "sass": "^1.50.0",
     "simple-syntax-highlighter": "^1.5.0",
-    "vue": "^2.6.14",
-    "vue-cli-plugin-vuetify": "^2.4.8",
-    "vue-router": "^3.5.3",
-    "vue-scrollto": "^2.20.0",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify": "^2.6.4"
+    "vite-plugin-pug": "^0.3.1",
+    "vue-router": "^4.0.14"
   },
   "keywords": [
     "vue calendar",
