Add Wave UI. :metal:

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "vite": "^2.9.1",
     "vite-plugin-pug": "^0.3.1",
     "vue": "^3.2.32",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "wave-ui": "^2.35.0"
   },
   "keywords": [
     "vue calendar",
