Update Wave UI.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "vite-plugin-pug": "^0.3.1",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
-    "wave-ui": "^2.36.3"
+    "wave-ui": "2.37.1"
   },
   "keywords": [
     "vue calendar",
