--- a/package.json
+++ b/package.json
@@ -39,14 +39,15 @@
     "@vue/compiler-sfc": "^3.2.33",
     "autoprefixer": "^10.4.5",
     "eslint": "^8.14.0",
-    "rollup-plugin-delete": "^2.0.0",
-    "sass": "^1.50.1",
+    "rollup": "^2.71.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.5.1",
     "simple-syntax-highlighter": "^2.2.0",
     "vite": "^2.9.5",
     "vite-plugin-pug": "^0.3.1",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
-    "wave-ui": "2.37.1"
+    "wave-ui": "^2.40.2"
   },
   "keywords": [
     "vue calendar",
