--- a/package.json
+++ b/package.json
@@ -33,22 +33,23 @@
     "LICENSE"
   ],
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/core": "^7.18.9",
+    "@babel/eslint-parser": "^7.18.9",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@mdi/font": "^6.6.96",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vue/compiler-sfc": "^3.2.33",
-    "autoprefixer": "^10.4.5",
-    "eslint": "^8.14.0",
-    "rollup": "^2.71.1",
+    "@mdi/font": "^6.9.96",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/compiler-sfc": "^3.2.37",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.20.0",
+    "rollup": "^2.77.2",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.5.1",
-    "simple-syntax-highlighter": "^2.2.0",
-    "vite": "^2.9.5",
+    "sass": "^1.54.0",
+    "simple-syntax-highlighter": "^2.2.3",
+    "vite": "^2.9.14",
     "vite-plugin-pug": "^0.3.1",
-    "vue-router": "^4.0.14",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.3",
     "wave-ui": "^2.40.2"
   },
   "peerDependencies": {
