--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "vite",
     "build": "vite build --base /vue-cal/",
     "build-bundle": "BUNDLE=true vite build && mv ./dist/style.css ./dist/vuecal.css && rm ./dist/favicon.ico",
-    "serve": "vite preview --root docs --base /vue-cal/",
+    "serve": "vite preview docs --base /vue-cal/",
     "lint": "vite lint"
   },
   "main": "dist/vue-cal.cjs.js",
