--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@vue/compiler-sfc": "^3.2.37",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.20.0",
+    "postcss": "^8.4.18",
+    "pug": "^3.0.2",
     "rollup": "^2.77.2",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.54.0",
@@ -61,7 +63,7 @@
     "vite": "^3.0.9",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3",
-    "wave-ui": "file:/Users/anto/localhost/wave-ui/wave-ui-2.41.0.tgz"
+    "wave-ui": "^2.43.1"
   },
   "peerDependencies": {
     "vue": "^2.6.14 || ^3.2.0"
