--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@vue/compiler-sfc": "^3.5.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
+    "pinia": "^2.2.2",
     "postcss": "^8.4.45",
     "pug": "^3.0.3",
     "rollup": "^4.21.2",
