--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "./package.json": "./package.json",
     "./dist/*": "./dist/*"
   },
+  "type": "module",
   "keywords": [
     "vuecal",
     "vue cal",
