Cleanup and retest.

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -5,4 +5,4 @@ contact_links:
     about: Use GitHub discussions for message-board style questions and discussions.
   - name: Sponsor
     url: https://github.com/sponsors/antoniandre
-    about: Love Vu Cal? Please consider supporting us via Github Sponsor.
+    about: Love Vue Cal? Please consider supporting us via Github Sponsor.
