Updated the Vite config for bundling.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base /vue-cal/",
-    "build-bundle": "BUNDLE=true vite build && mv ./dist/style.css ./dist/vuecal.css && rm ./dist/favicon.ico",
+    "build-bundle": "BUNDLE=true vite build",
     "serve": "vite preview docs --base /vue-cal/",
     "lint": "vite lint"
   },
