--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "dev": "vite",
     "build": "vite build --base /vue-cal/",
     "build-bundle": "BUNDLE=true vite build",
-    "serve": "vite preview docs --base /vue-cal/",
+    "preview": "vite preview --base /vue-cal/",
     "lint": "vite lint"
   },
   "devDependencies": {
