--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   "license": "MIT",
   "funding": "https://github.com/sponsors/antoniandre",
   "main": "dist/vue-cal.cjs.js",
-  "unpkg": "dist/vue-cal.iife.js",
-  "jsdelivr": "dist/vue-cal.iife.js",
   "module": "dist/vue-cal.es.js",
+  "type": "module",
   "files": [
     "dist",
     "package.json",
@@ -22,10 +21,11 @@
       "import": "./dist/vue-cal.es.js",
       "require": "./dist/vue-cal.cjs.js"
     },
-    "./package.json": "./package.json",
-    "./dist/*": "./dist/*"
+    "./style": "./dist/vue-cal.css",
+    "./style.css": "./dist/vue-cal.css",
+    "./i18n/*": "./dist/i18n/*",
+    "./package.json": "./package.json"
   },
-  "type": "module",
   "keywords": [
     "vuecal",
     "vue cal",
@@ -35,7 +35,6 @@
     "vue",
     "vuejs",
     "vue 3",
-    "vue 2",
     "ui"
   ],
   "scripts": {
