--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "build": "vite build --base /vue-cal/",
     "build-bundle": "BUNDLE=true vite build",
     "preview": "vite preview --base /vue-cal/",
-    "lint": "vite lint"
+    "lint": "vite lint",
+    "publish-doc": "npm run build && npm run build-bundle && git add . && git commit -m 'Publish documentation on Github.' && git push && git push --tag"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
